# team-4-mate-hackaton

./: README.md
backend/: pyproject.toml
backend/src/: main.py  schemas.py  services.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Demo.tsx  Home.tsx
